# neuroracer

./: .gitignore  Dockerfile  README.md  q_learning.ipynb  setup.sh  start.sh
docker/: Dockerfile  clone_build.sh  install_gzweb.sh  install_ros.sh  requirements.txt  setup.sh  start.sh
neuroracer_gym/: CMakeLists.txt  package.xml  setup.py
neuroracer_gym/src/neuroracer_gym/: neuroracer_env.py
neuroracer_gym/src/neuroracer_gym/tasks/: neuroracer_continuous_task.py  neuroracer_discrete_task.py
neuroracer_gym_rl/: CMakeLists.txt  package.xml  q_learning.ipynb
neuroracer_gym_rl/config/: params.yaml
neuroracer_gym_rl/launch/: ddpg_learning.launch  qlearning.launch  start.launch
neuroracer_gym_rl/scripts/: ddpg.py  double_dqn.py  double_drqn.py  dqn.py  drqn.py  neuroracer_discrete.py  start_qlearning.py  training.py  utils.py
qlearning/: CMakeLists.txt  package.xml
qlearning/launch/: start_training.launch
qlearning/scripts/: start_qlearning.py
