<?xml version="1.0"?>
<package format="2">
  <name>neuroracer_gym</name>
  <version>0.0.0</version>
  <description>neuroracer_gym package</description>

  <maintainer email="aray@todo.todo">aray</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>racecar_gazebo</build_depend>

  <build_depend>openai_ros</build_depend>
  <build_depend>rospy</build_depend>
  <exec_depend>openai_ros</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
