<?xml version="1.0"?>
<package format="2">
  <name>neuroracer_gym_rl</name>
  <version>0.0.0</version>
  <description>The neuroracer_gym_rl package</description>

  <maintainer email="aray.karjauv@todo.todo">aray</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>neuroracer_gym</build_depend>
  <build_depend>rospy</build_depend>
  <exec_depend>neuroracer_gym</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
